* css: Fixed opacity setting for disabled text fields. * Fixed loading mask flickering. * Added message (still needs to be localized) to global loading mask. * Grid: Removed grid-level loading mask since we now use the global one.

--- a/Home/Resources/js/kitto-core.css
+++ b/Home/Resources/js/kitto-core.css
@@ -8,6 +8,7 @@
 	color: #666666;
 }
 
+.
 .x-form-empty-field
 {
 	font-style: italic;
@@ -18,6 +19,16 @@
 {
 	/* prevents remote combos to be rendered one pixel off with certain themes */
 	vertical-align: top;
+}
+
+.x-form-item-default.x-item-disabled
+{
+    opacity: 0.7;
+}
+
+body > .x-mask {
+    /* Invisible mask avoids flickering */
+    background-color: rgba(0, 0, 0, 0);
 }
 
 .k-loading {
